--- a/views/interactions.html
+++ b/views/interactions.html
@@ -7,14 +7,139 @@
 </head>
 <body>
 <div class='page-wrap'>
-<h1>Interactions Research</h1>
+<div class='sym-wrap'>
+<h1>Symmetric</h1>
 
-Initial exploration of Symmetric design patterns in the browser. Incorporating Outbrain language into iteratable HTML. 
+<p>Initial exploration of Symmetric design patterns in the browser. Incorporating Outbrain's style guide into a live pattern library, in iteratable HTML.</p>
+<hr>
+<h2>Colors</h2>
 
-<h2>Symmetric</h2>
+<table style="width:130%">
+  <tr>
+    <th><h2>OUTBRAIN</h2></th>
+    <th><h2>AMPLIFY</h2></th>
+    <th><h2>ENGAGE</h2></th>
+  </tr>
+  <tr>
+    <th><div class="circle"></div>Outbrain Brand #F08421</th>
+    <th><div class="circle" style="background-color:#6b1e4b"></div>Amplify, Standard Btn. #6B1E4B</th>
+    <th><div class="circle" style="background-color:#5060A3"></div>Engage Brand #5060A3</th>
+  </tr>
+  <tr>
+    <th></th>
+    <th><div class="circle" style="background-color:#86447D"></div>Btn Hover #86447D</th>
+    <th><div class="circle" style="background-color:#63A1AB"></div>Primary (Buttons) #63A1AB</th>
+  </tr>
+    <tr>
+    <th></th>
+    <th><div class="circle" style="background-color:#535C7F"></div>Table Header BG, Selected #535C7F</th>
+    <th><div class="circle" style="background-color:#364E5F"></div>Level 2 #364E5F</th>
+  </tr>
+  <tr>
+    <th></th>
+    <th><div class="circle" style="background-color:#69739E"></div>Small Hovers #69739E</th>
+    <th><div class="circle" style="background-color:#65B2D5"></div>Level 3 #65B2D5</th>
+  </tr>
+  <tr>
+    <th></th>
+    <th><div class="circle" style="background-color:#EBECF2"></div>Totals Row #EBECF2</th>
+    <th></th>
+  </tr>
+</table>
+<hr>
+<table style="width:130%">
+  <tr>
+    <th><h2>CROSS</h2></th>
+    <th></th>
+    <th><h2>DEVICE COLORS</h2></th>
+  </tr>
+  <tr>
+    <th><div class="circle" style="background-color:#30708F"></div>Table Header #30708F</th>
+    <th><div class="circle" style="background-color:#565154"></div>Reg Font Color #565154</th>
+    <th><div class="circle" style="background-color:#C1ABD1"></div>Desktop #C1ABD1</th>
+  </tr>
+  <tr>
+    <th><div class="circle" style="background-color:#598DA5"></div>Table Link Color #598DA5</th>
+    <th><div class="circle" style="background-color:#93908C"></div>Subhead Font Color #93908C</th>
+    <th><div class="circle" style="background-color:#6B1E4B"></div>Tablet #6B1E4B</th>
+  </tr>
+  <tr>
+    <th><div class="circle" style="background-color:#A4C4D3"></div>Table/Chart Level 2 #A4C4D3</th>
+    <th><div class="circle" style="background-color:#C4BFB9"></div>Tertiary Font #C4BFB9</th>
+    <th><div class="circle" style="background-color:#598DA5"></div>Mobile #598DA5</th>
+  </tr>
+  <tr>
+    <th><div class="circle" style="background-color:#D2F1FF"></div>Highlight Selection #D2F1FF</th>
+    <th><div class="circle" style="background-color:#E2DFDE"></div>Dropdown Hover Selection #E2DFDE</th>
+    <th></th>
+  </tr>
+</table>
+<hr>
+<table style="width:130%">
+  <tr>
+    <th><h2>CHARTS</h2></th>
+    <th></th>
+    <th></th>
+  </tr>
+  <tr>
+    <th><div class="circle" style="background-color:#E68853"></div>% CTR #E68853</th>
+    <th><div class="circle" style="background-color:#6BC6C4"></div>$ CPM #6BC6C4</th>
+    <th><div class="circle" style="background-color:#817BA1"></div># Uniques #817BA1</th>
+  </tr>
+  <tr>
+    <th><div class="circle" style="background-color:#DDBD62"></div># Impressions #DDBD62</th>
+    <th><div class="circle" style="background-color:#8DDAC9"></div>$ Spend #8DDAC9</th>
+    <th><div class="circle" style="background-color:#BE3655"></div>Drop #BE3655</th>
+  </tr>
+  <tr>
+    <th><div class="circle" style="background-color:#BBC656"></div># Clicks #BBC656</th>
+    <th><div class="circle" style="background-color:#439093"></div>% Conversion Rate #439093</th>
+    <th><div class="circle" style="background-color:#C4BFB9"></div>Neutral #C4BFB9</th>
+  </tr>
+  <tr>
+    <th><div class="circle" style="background-color:#80B573"></div>$ Average CPC #80B573</th>
+    <th><div class="circle" style="background-color:#6BB8D9"></div># Actions #6BB8D9</th>
+    <th><div class="circle" style="background-color:#819E43"></div>Lift #819E43</th>
+  </tr>
+  <tr>
+    <th><div class="circle" style="background-color:#488B70"></div># PVs #488B70</th>
+    <th><div class="circle" style="background-color:#A3A9DC"></div>$ CPA #A3A9DC</th>
+    <th></th>
+  </tr>
+</table>
+<hr>
 
+<h2>Typography</h2>
+
+<h1>H1 Primary Headline, 23pt Regular, Dark Gray #726C6F, Lorem Ipsum Dolor</h1>
+
+<h2>H2 Secondary Headline, 18pt Regular, Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing</h2>
+
+<p>Standard body, 12pt Regular, Gray #565154. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+List header
+<ul>
+  <li>Lorem ipsum dolor sit amet</li>
+  <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+  <li>Lorem ipsum dolor sit amet</li>
+
+</ul>
+
+<p style="width:600px"><small>Small text, 11pt Regular, Gray #565154. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</small></p>
 
 <hr>
+
+<h2>Text Fields</h2>
+
+
+
+</div>
+
+
+
+
+<a style="margin-top:50px" class="hvr-bounce-to-top" onclick="showdiv('research')">SHOW INTERACTIONS RESEARCH</a>
+<div id="research" style="display:none">
 <h2>Buttons</h2>
 <section class="flex-container">
 <a href="#" class="hvr-bounce-to-top">Background Bounce</a>
@@ -91,8 +216,18 @@ Initial exploration of Symmetric design patterns in the browser. Incorporating O
 </section>
 <hr>
 <h2>Dot Navigation</h2>
-
 </div>
+</div>
+<script>
+function showdiv(id){
+  var change = document.getElementById(id);
+  if (change.style.display === 'none'){
+    change.style.display = 'block';
+  } else {
+    change.style.display = 'none';
+  }
+}
+</script>
 </body>
 
 </html>
