--- a/style.css
+++ b/style.css
@@ -35,7 +35,17 @@ hr {
 	margin: 20pt;
   width:130%;
 }
-
+.form{
+  font-size: 10pt;
+  font-weight: 600;
+}
+/*
+::-webkit-input-placeholder {
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-size: 1.2em;
+  font-weight: 300;
+  color: #726C6F;
+} */
 a {
   color: white;
   text-decoration: none;
@@ -60,7 +70,50 @@ th{
   font-weight: 800;
   margin-bottom: 30px;
 }
+input{
+  padding-left: 10px;
+  border: 1px solid #93908C;
+  border-radius: 3px;
+  width: 320px;
+  height: 31px;
+  outline: none;
+  margin-bottom: 20px;
+  margin-top:5px;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-size: 11pt;
+  font-weight: 100;
+}
+textarea:focus, input:focus{
+  border:2px solid #69739E;
+  
 
+}
+.password{
+  background: url(images/lock.png) no-repeat scroll;
+  padding-left: 40px;
+}
+.money{
+  background: url(images/dollar.png) no-repeat scroll;
+  padding-left: 35px;
+  text-align: right;
+  font-size: 9pt;
+  padding-right: 5px;
+}
+.invalid, .invalid:focus{
+  border:2px solid #BE3655;
+  margin-bottom: 5px;
+  color: #BE3655;
+}
+.invalid:focus{
+  border:2px solid #BE3655;
+}
+
+.errortext{
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-size: 9pt;
+  font-weight: 100;
+  color: #BE3655;
+}
 .page-wrap {
     margin: 0 auto;
     max-width: 1000px;
