--- a/style.css
+++ b/style.css
@@ -360,8 +360,17 @@ input[type="checkbox"] + label span {
     cursor:pointer;
 }
 
+input[type="checkbox"]+ label span:hover {
+    border: 2px solid #69739E;
+}
+
 input[type="checkbox"]:checked + label span {
     background:url(images/checked.png) center no-repeat, #726C6F;
+}
+
+input[type="checkbox"]:checked + label span:hover {
+  border: 2px solid #69739E;
+    background:url(images/checked.png) center no-repeat, #69739E;
 }
 
 input.checkbox-error[type="checkbox"] + label span {
@@ -389,9 +398,18 @@ input[type="radio"] + label span {
     cursor:pointer;
 }
 
+input[type="radio"]+ label span:hover {
+    border: 2px solid #69739E;
+}
+
 input[type="radio"]:checked + label span {
     background:url(images/rdio.png) center no-repeat, white;
 } 
+
+input[type="radio"]:checked + label span:hover {
+  border: 2px solid #69739E;
+  background:url(images/rdio-hvr.png) center no-repeat, white;
+}
 
 input.radio-error[type="radio"] + label span {
   border: 2px solid #C03453;
