--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ a {
   font-weight: 600;
 }
 
-/* Toggle */
+/* TOGGLE */
 .toggle {
   display: inline-block;
   position: absolute;
@@ -324,7 +324,6 @@ input.toggle-round:checked + label:after {
   background-color: #535C7F;
 }
 
-
 input.toggle-round-disabled + label {
   padding: 2px;
   width: 60px;
@@ -344,34 +343,38 @@ input.toggle-round-disabled + label:after {
   border-radius: 100%;
 }
 
+/* CHECKBOX */
+
 input[type="checkbox"] {
-    display:none;
+  display:none;
 }
 
 input[type="checkbox"] + label span {
-    display:inline-block;
-    width:19px;
-    height:19px;
-    margin:-1px 10px 0 0;
-    vertical-align:middle;
-    background:white;
-    border: 2px solid #726C6F;
-    border-radius: 3px;
-    cursor:pointer;
+  display:inline-block;
+  width:19px;
+  height:19px;
+  margin:-1px 10px 0 0;
+  vertical-align:middle;
+  background:white;
+  border: 2px solid #726C6F;
+  border-radius: 3px;
+  cursor:pointer;
 }
 
 input[type="checkbox"]+ label span:hover {
-    border: 2px solid #69739E;
+  border: 2px solid #69739E;
 }
 
 input[type="checkbox"]:checked + label span {
-    background:url(images/checked.png) center no-repeat, #726C6F;
+  background:url(images/checked.png) center no-repeat, #726C6F;
 }
 
 input[type="checkbox"]:checked + label span:hover {
   border: 2px solid #69739E;
-    background:url(images/checked.png) center no-repeat, #69739E;
+  background:url(images/checked.png) center no-repeat, #69739E;
 }
+
+/* CHECKBOX ERROR */
 
 input.checkbox-error[type="checkbox"] + label span {
   border: 2px solid #C03453;
@@ -382,28 +385,43 @@ input.checkbox-error[type="checkbox"]:checked + label span {
   background:url(images/checked.png) center no-repeat, #C03453;
 }
 
+/* CHECKBOX DISABLED */
+
+input[type="checkbox"]:disabled + label span {
+  border: 2px solid #D5D3D4;
+  pointer-events:none;
+}
+
+input.checkbox-disabled[type="checkbox"]:checked + label span {
+  border: 2px solid #D5D3D4;
+  pointer-events:none;
+  background:url(images/checked.png) center no-repeat, #D5D3D4;
+}
+
+/* RADIO BUTTON */
+
 input[type="radio"] {
-    display:none;
+  display:none;
 }
 
 input[type="radio"] + label span {
-    display:inline-block;
-    width:19px;
-    height:19px;
-    margin:-1px 10px 0 0;
-    vertical-align:middle;
-    background:white;
-    border: 2px solid #726C6F;
-    border-radius: 100%;
-    cursor:pointer;
+  display:inline-block;
+  width:19px;
+  height:19px;
+  margin:-1px 10px 0 0;
+  vertical-align:middle;
+  background:white;
+  border: 2px solid #726C6F;
+  border-radius: 100%;
+  cursor:pointer;
 }
 
 input[type="radio"]+ label span:hover {
-    border: 2px solid #69739E;
+  border: 2px solid #69739E;
 }
 
 input[type="radio"]:checked + label span {
-    background:url(images/rdio.png) center no-repeat, white;
+  background:url(images/rdio.png) center no-repeat, white;
 } 
 
 input[type="radio"]:checked + label span:hover {
@@ -411,16 +429,28 @@ input[type="radio"]:checked + label span:hover {
   background:url(images/rdio-hvr.png) center no-repeat, white;
 }
 
+/* RADIO ERROR */
 input.radio-error[type="radio"] + label span {
   border: 2px solid #C03453;
 }
 
 input.radio-error[type="radio"]:checked + label span {
-      border: 2px solid #C03453;
-      background:url(images/rdio-err.png) center no-repeat, white;
+  border: 2px solid #C03453;
+  background:url(images/rdio-err.png) center no-repeat, white;
 
 } 
 
+/* RADIO DISABLED */
+input[type="radio"]:disabled + label span {
+  border: 2px solid #D5D3D4;
+  pointer-events:none;
+}
+
+input.radio-disabled[type="radio"]:checked + label span {
+  border: 2px solid #D5D3D4;
+  background:url(images/rdio-dsb.png) center no-repeat, white;
+  pointer-events:none;
+} 
 
 
 .table-td{
