--- a/style.css
+++ b/style.css
@@ -43,10 +43,12 @@ h2 {
 }
 
 small{
-  font-size: 11pt;
-  line-height: 11pt;
+  font-size: 9pt;
+  text-align: left;
 }
-
+.small{
+  font-size: 9pt;
+}
 li{
   margin-bottom: 8px;
 }
@@ -59,6 +61,36 @@ hr {
   margin: 0px;
   margin-top: -10px;
   margin-bottom: 45px;
+}
+.nav {
+  display: flex;
+  border: solid 1px black;
+  background-position: 11px 11px;
+  background: linear-gradient(to right, #612B4C, #616EAE);
+  background-repeat: no-repeat;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  height: 45px;
+  width: 100%;
+  z-index: 1;
+  color: white;
+  margin: 0 auto;
+  justify-content: space-around;
+  flex-direction:row;
+  align-items: center;
+
+}
+.nav > a {
+  color:white;
+}
+.item{
+    text-decoration: none;
+    padding: 10px;
+}
+
+.nav > :nth-child(1) {
+  margin-right: auto;
 }
 
 button{
@@ -77,7 +109,7 @@ button{
   padding-right: 20px;
   margin-right:30px;
   margin-bottom: 30px;
-  width: 136px;
+  /*width: 136px;*/
 }
 
 .loginfield{
@@ -147,19 +179,7 @@ textarea:focus, input:focus{
   box-sizing: border-box;
 }
 
-header {
-  background-position: 11px 11px;
-  background: linear-gradient(to right, #612B4C, #616EAE);
-  background-image: url(images/sym-header.png);
-  background-image: url(images/sym-header.png), linear-gradient(to right, #612B4C, #616EAE);
-  background-repeat: no-repeat;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  height: 45px;
-  width: 100%;
-  z-index: 1;
-}
+
 
 
 a {
@@ -167,9 +187,6 @@ a {
 }
 a:hover{
   text-decoration: none;
-}
-.small{
-  font-size: 9pt;
 }
 
 .form{
@@ -589,31 +606,31 @@ input[type=password] {
   margin: 10px;
 }
 
-#white{
+.white{
   color: #6B1E4B;
   text-decoration: none;
-  background-color: transparent;
+  background-color: white;
   border: 2px #6B1E4B solid;
   border-radius: 3px;
   padding: 13px;
   margin: 10px;	
 }
 
-#white:hover {
+.white:hover {
 	color:white;
 }
 
-#bg:hover {
+.bg:hover {
 	background-color:#450A2D;
 }
 
-#underline {
+.underline {
 	color: #6B1E4B;
 	background-color: transparent;
 	border: transparent;
 }
 
-#hollow:hover {
+.hollow:hover {
 	color: #6B1E4B;
 }
 .form {
@@ -634,6 +651,72 @@ input[type=password] {
     -webkit-justify-content: flex-start;
     justify-content: space-between;
 }
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(23,0,44); /* Fallback color */
+    background-color: rgba(23,0,44,0.7); /* Black w/ opacity */
+}
+
+/* The Close Button */
+.close {
+    color: #726C6F;
+    float: right;
+    font-size: 18px;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+ 
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #C7C6C4;
+    border-radius: 3px;
+    width: 80%;
+    max-width: 620px;
+    height: 208px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+.modal-buttons{
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  text-align: left;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top: -300px; opacity: 0} 
+    to {top: 0; opacity: 1}
+}
+
+@keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+}
+
+
+
 
 .moving.leftUp{
     animation: kenburnsLeftUp, kenburnsFadeOut;
@@ -1228,7 +1311,7 @@ element.style {
   -moz-osx-font-smoothing: grayscale;
   position: relative;
   overflow: hidden;
-  background: #e1e1e1;
+  background: transparent;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
