--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -553,12 +553,12 @@ input[type="checkbox"]+ label span:hover {
 }
 
 input[type="checkbox"]:checked + label span {
-  background:url(../images/checked.png) center no-repeat, #726C6F;
+  background:url(images/checked.png) center no-repeat, #726C6F;
 }
 
 input[type="checkbox"]:checked + label span:hover {
   border: 2px solid #69739E;
-  background:url(../images/checked.png) center no-repeat, #69739E;
+  background:url(images/checked.png) center no-repeat, #69739E;
 }
 
 /* CHECKBOX ERROR */
@@ -569,7 +569,7 @@ input.checkbox-error[type="checkbox"] + label span {
 
 input.checkbox-error[type="checkbox"]:checked + label span {
   border: 2px solid #C03453;
-  background:url(../images/checked.png) center no-repeat, #C03453;
+  background:url(images/checked.png) center no-repeat, #C03453;
 }
 
 /* CHECKBOX DISABLED */
@@ -582,7 +582,7 @@ input[type="checkbox"]:disabled + label span {
 input.checkbox-disabled[type="checkbox"]:checked + label span {
   border: 2px solid #D5D3D4;
   pointer-events:none;
-  background:url(../images/checked.png) center no-repeat, #D5D3D4;
+  background:url(images/checked.png) center no-repeat, #D5D3D4;
 }
 
 /* RADIO BUTTON */
@@ -635,7 +635,7 @@ input[type="radio"]:disabled + label span {
 
 input.radio-disabled[type="radio"]:checked + label span {
   border: 2px solid #D5D3D4;
-  background:url(../images/rdio-dsb.png) center no-repeat, white;
+  background:url(images/rdio-dsb.png) center no-repeat, white;
   pointer-events:none;
 } 
 
@@ -657,7 +657,7 @@ input[type=password] {
   box-sizing: border-box;
   background-attachment: fixed;
   background-size: cover;
-  background: url(../images/lock.png) no-repeat, #fff;
+  background: url(images/lock.png) no-repeat, #fff;
   background-position: 0px;
   padding-left: 40px;
 }
@@ -665,7 +665,7 @@ input[type=password] {
 .money{
   box-sizing: border-box;
   background-attachment: fixed;
-  background: url(../images/dollar.png) no-repeat scroll, #fff;
+  background: url(images/dollar.png) no-repeat scroll, #fff;
   padding-left: 35px;
   background-position: 0px;
 }
